# capture-test

./: .gitignore  README.md  capture-test.sln
capture-test/: CMakeLists.txt  capture-func.cpp  capture-test.cpp  capture-test.vcxproj  capture-test.vcxproj.filters  dxgi-sample.cpp  dxgi-sample.h
demo/: CMakeLists.txt  README.md  demo_button.cpp  demo_button.h  main.cpp  output_button.cpp  preview_button.cpp  region_button.cpp  setting_button.cpp  status_button.cpp
demo/demo_capture/: demo_capture.cpp  demo_capture.h  gdi_capture.cpp  gdi_capture.h
